Firefox bug -- search submit button rendering as too wide
Thus breaking layout -- forcing horizontal scrollbars

--- a/css/mediacommons_base.css
+++ b/css/mediacommons_base.css
@@ -1932,8 +1932,6 @@ nav.global li.sites_nav ul {
 /* line 38, ../sass/modules/header/_header--search.scss */
 [role="search"] input[type="submit"] {
   font-family: "MediaCommons-Icon-Font";
-  height: 36px;
-  width: 2.5em;
   -webkit-border-radius: 0px 6px 6px 0;
   -moz-border-radius: 0px 6px 6px 0;
   border-radius: 0px 6px 6px 0;
@@ -1944,29 +1942,29 @@ nav.global li.sites_nav ul {
   flex: 1 0 36px;
 }
 
-/* line 55, ../sass/modules/header/_header--search.scss */
+/* line 53, ../sass/modules/header/_header--search.scss */
 .wf-droidsans-n4-active input[type="search"] {
   font-family: "Open Sans", "Open Sans", "Helvetica", "Lucida Grande", "Verdana", sans-serif;
 }
 
 @media (min-width: 801px) {
-  /* line 60, ../sass/modules/header/_header--search.scss */
+  /* line 58, ../sass/modules/header/_header--search.scss */
   [role="search"] label {
     display: none;
   }
 
-  /* line 63, ../sass/modules/header/_header--search.scss */
+  /* line 61, ../sass/modules/header/_header--search.scss */
   [role="search"] label span {
     display: none;
   }
 
-  /* line 66, ../sass/modules/header/_header--search.scss */
+  /* line 64, ../sass/modules/header/_header--search.scss */
   [role="search"] form {
     margin-top: 10px;
   }
 }
 @media (min-width: 240px) and (max-width: 800px) {
-  /* line 72, ../sass/modules/header/_header--search.scss */
+  /* line 70, ../sass/modules/header/_header--search.scss */
   [role="search"] {
     margin: 0;
     display: block;
@@ -1974,11 +1972,11 @@ nav.global li.sites_nav ul {
     position: relative;
     background-color: transparent;
   }
-  /* line 78, ../sass/modules/header/_header--search.scss */
+  /* line 76, ../sass/modules/header/_header--search.scss */
   [role="search"] label span {
     display: none;
   }
-  /* line 81, ../sass/modules/header/_header--search.scss */
+  /* line 79, ../sass/modules/header/_header--search.scss */
   [role="search"] label {
     height: 40px;
     width: 40px;
@@ -1999,7 +1997,7 @@ nav.global li.sites_nav ul {
     border: 1px solid;
     border-color: #ddd #bbb #999;
   }
-  /* line 94, ../sass/modules/header/_header--search.scss */
+  /* line 92, ../sass/modules/header/_header--search.scss */
   [role="search"] fieldset {
     clear: both;
     border: none;
@@ -2012,7 +2010,7 @@ nav.global li.sites_nav ul {
     height: 0;
     display: none;
   }
-  /* line 106, ../sass/modules/header/_header--search.scss */
+  /* line 104, ../sass/modules/header/_header--search.scss */
   [role="search"] .search-contain {
     padding: 10px;
     margin: 10px 0 0 0;
@@ -2021,7 +2019,7 @@ nav.global li.sites_nav ul {
     -webkit-box-shadow: inset #c8c8c8 0px -2px 0px 0px, inset #c8c8c8 0px 1px 0px 0px;
     box-shadow: inset #c8c8c8 0px -2px 0px 0px, inset #c8c8c8 0px 1px 0px 0px;
   }
-  /* line 113, ../sass/modules/header/_header--search.scss */
+  /* line 111, ../sass/modules/header/_header--search.scss */
   [role="search"] form.open input[type="submit"] {
     height: 46px;
     background: none;
@@ -2035,11 +2033,11 @@ nav.global li.sites_nav ul {
     border-bottom-width: 1px;
     border-bottom-color: #c8c8c8 !important;
   }
-  /* line 128, ../sass/modules/header/_header--search.scss */
+  /* line 126, ../sass/modules/header/_header--search.scss */
   [role="search"] form.open fieldset {
     height: 80px;
   }
-  /* line 132, ../sass/modules/header/_header--search.scss */
+  /* line 130, ../sass/modules/header/_header--search.scss */
   [role="search"] input[name="search_block_form"] {
     height: 46px;
     width: 85%;
@@ -2048,18 +2046,18 @@ nav.global li.sites_nav ul {
     border-bottom-width: 1px;
     border-bottom-color: #c8c8c8 !important;
   }
-  /* line 139, ../sass/modules/header/_header--search.scss */
+  /* line 137, ../sass/modules/header/_header--search.scss */
   [role="search"] input[name="search_block_form"]:focus {
     outline: none;
     border-color: none;
   }
-  /* line 148, ../sass/modules/header/_header--search.scss */
+  /* line 146, ../sass/modules/header/_header--search.scss */
   [role="search"] input[type="submit"] {
     height: 2.5em;
     width: 2.5em;
     margin-top: 5px;
   }
-  /* line 153, ../sass/modules/header/_header--search.scss */
+  /* line 151, ../sass/modules/header/_header--search.scss */
   [role="search"] fieldset[aria-hidden="true"] {
     width: 15%;
   }
