--- a/sass/modules/header/_header--search.scss
+++ b/sass/modules/header/_header--search.scss
@@ -38,8 +38,6 @@
   input[type="submit"] {
     font-family: $icon-font-name;
     // Uses Blank Characters http://scottkellum.com/2013/10/25/the-new-kellum-method.html
-    height: 36px;
-    width: 2.5em;
     -webkit-border-radius: 0px 6px 6px 0;
     -moz-border-radius: 0px 6px 6px 0;
     border-radius: 0px 6px 6px 0;
